# fantasy-gamebook-engine

./: .gitignore  .mcp.json  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/agents/: auth-obs-agent.md  backend-agent.md  frontend-agent.md  storage-agent.md
.claude/commands/: backpack.md  hero.md  map.md  salvar.md  save.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_accounts_session_lease.py
docker/dex/: config.yaml
docker/otel/: config.yaml
docs/: 00-index.md  00-indice.md  01-rules.md  02-domain.md  03-storage.md  04-combat.md  05-mcp.md  06-adventure-module.md  06-modulo-aventura.md  07-harness.md  08-commands.md  CONTRACTS.md  fantasy-gamebook-engine-erd.drawio
docs/adrs/: ADR-001-combat-sub-agent-delegation-pattern.md  ADR-002-context-compaction-strategy.md  ADR-003-adventure-module-as-skill-format.md  ADR-004-slash-command-design-pattern.md  ADR-005-determinism-via-injected-randomsource-protocol.md  ADR-006-combat-luck-tally-ephemeral-not-persisted.md  ADR-007-mcp-server-fastmcp-stdio.md  ADR-008-two-layer-plugability-audit.md  ADR-009-swap-boundary-tests-through-the-consumer.md  ADR-010-world-write-path-through-mcp.md  ADR-011-phase2-harness-pydanticai-narrator-backend.md  ADR-012-react-vite-typescript-spa-toolchain.md  ADR-013-async-alembic-env-database-url.md  ADR-014-postgres-storage-sync-async-bridge.md  ADR-014-pydantic-ai-v2-mcp-toolset-direct-call.md  (+15 more)
frontend/: .env.local.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
tests/qa/: _audit.py  (+8 more)
(+168 files in other folders)
