[project]
name = "gamebook"
version = "0.1.0"
description = "Solo-play gamebook engine: AI narrator over an MCP server (Phase 1 MVP)"
readme = "README.md"
authors = [
    { name = "rc-ventura", email = "r.c_ventura@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "mcp>=1.28.0",
    "pydantic>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
