[project]
name = "gamebook"
version = "0.1.0"
description = "Solo-play gamebook engine: AI narrator over an MCP server (Phase 1 MVP)"
readme = "README.md"
authors = [
    { name = "rc-ventura", email = "r.c_ventura@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "anthropic>=0.40.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mcp>=1.28.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-sdk>=1.30.0",
    "pydantic>=2.13.4",
    "pydantic-ai[anthropic]>=0.0.15",
    "python-jose[cryptography]>=3.5.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
]
